# studyRepo

./: CMakeLists.txt  README.md
docNvim/: CMakeLists.txt  hello  main.c
docNvim/Bubble_Sort/: app  main.c  main.s
docNvim/MacrosFunc/: app  main.c
docNvim/Pointers/: app  main.c
docNvim/c_writingReading_files/: app  main.c  reading.c
docNvim/goto_breakCont/: app  main.c
docNvim/lesson1/: main.c  main.s
docNvim/lesson2/: app  app2  main.c  main.s
docNvim/lesson3Math/: app  math.c
docNvim/lesson4_circleference/: app  circle.c  hip  hipotenuse.c
docNvim/lesson5_Switch/: app  main.c  temp  temp.c
docNvim/lesson6_function/: app  main.c
docNvim/lesson7_stringFunc/: app  main.c
docNvim/memoryAdresses/: app  main.c
